--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "axios": "^1.7.5",
     "postcss": "^8",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.4.10"
